# glad

./: CMakeLists.txt  LICENSE.txt  README.md
include/glad/: glad.h  glad_egl.h  glad_glx.h  glad_wgl.h
src/: glad.c  glad_egl.c  glad_glx.c  glad_wgl.c
